# ROS2_Projects

./: README.md
aisd_hearing/: package.xml  setup.py
aisd_hearing/aisd_hearing/: recording_publisher.py  words_publisher.py
aisd_speaking/: package.xml  setup.py
aisd_speaking/aisd_speaking/: speak.py
