<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aisd_speaking</name>
  <version>0.0.0</version>
  <description>Ros2 package for tasks</description>
  <maintainer email="ayya0017@algonquinlive.com">aisd</maintainer>
  <license>no license</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ffmpeg</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
